# pyvterm

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: PROTOCOL-EXTENSIONS.md  PROTOCOL.md
examples/: cube3d.py  lissajous.py  ruttetra.py  spectrum3d.py  testpattern.py
src/pyvterm/: __init__.py  debug.py  ext.py  frame.py  geometry.py  preview.py  protocol.py  terminal.py  transport.py
tests/: test_cube3d.py  test_debug.py  test_ext.py  test_frame.py  test_geometry.py  test_preview.py  test_protocol.py  test_ruttetra.py  test_spectrum3d.py  test_terminal.py  test_transport.py
