[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pyvterm"
dynamic = ["version"]
description = "Drive a pitrex/Vectrex over a serial port from Python using the USB-DVG (vecterm) protocol"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Josh Bailey", email = "josh@overlyspecific.com" }]
keywords = [
    "vectrex",
    "pitrex",
    "vector-graphics",
    "mame",
    "usb-dvg",
    "serial",
    "dvg",
    "retro",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
dependencies = ["pyserial>=3.5"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.8",
    "types-pyserial",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/anarkiwi/pyvterm"
Repository = "https://github.com/anarkiwi/pyvterm"
Issues = "https://github.com/anarkiwi/pyvterm/issues"
"Protocol upstream (pitrex)" = "https://github.com/gtoal/pitrex"

[tool.hatch.version]
path = "src/pyvterm/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyvterm"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/docs",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
packages = ["pyvterm"]
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["serial", "serial.*"]
ignore_missing_imports = true
